# Planeify-3D

./: CMakeLists.txt
Gcodes/Originals/: Sphere_A_PLA_13m18s.gcode
src/: main.cpp
src/builder/: Builder.h
src/identify/: CandidateFinder.cpp  CandidateFinder.h  Identifier.h
src/ir/: ProgramIR.h  Types.h
src/parser/: GCodeParser.cpp  GCodeParser.h  Parser.cpp  Parser.h
src/translator/: Translator.cpp  Translator.h
